--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
     <main>
       <h1 class="title prompt">Hi! I'm Adolfo.</h1>
       <p>
-        I’m a software engineer and I've spent my career working on
-        backends, APIs and infrastructure, but I can also juggle pixels around.
-
-        You can find out more about my past professional experience on <a href="https://www.linkedin.com/in/adolfo-silva/">LinkedIn</a> or check my <a href="https://github.com/adolfosilva">Github</a> profile.
+        I’m a software engineer and I've spent my career working on backends,
+        APIs and infrastructure, but I can also juggle pixels around. You can
+        find out more about my past professional experience on
+        <a href="https://www.linkedin.com/in/adolfo-silva/">LinkedIn</a> or
+        check my <a href="https://github.com/adolfosilva">Github</a> profile.
       </p>
 
+      <p>Browse my <a href="archive.html">blog</a>.</p>
+
       <p>
-        Want to say hello? Do you have a project and need a collaborator? Reach out over email at
+        Want to say hello? Do you have a project and need a collaborator? Reach
+        out over email at
         <a href="mailto:code@adolfosilva.org">code@adolfosilva.org</a>.
       </p>
     </main>
@@ -42,8 +46,6 @@
     body {
       margin: 0;
       padding: 0;
-      height: 100vh;
-      width: 100vw;
       font-size: 20px;
       background-color: #161616;
       line-height: 1.6;
